<resources>
    <string name="app_name">Floria</string>

    <!-- Bottom Navigation Bar -->
    <string name="Home">Главная</string>
    <string name="Articles">Статьи</string>
    <string name="Profile">Профиль</string>

    <string name="Article">Статья</string>

    <!-- Button -->
    <string name="galleryBtn">Галерея</string>
    <string name="captureBtn">Камера</string>

    <!-- Fragment Home -->
    <string name="aboutApp">"Это приложение поможет правильно ухаживать за растениями.\n\nДля этого нужно загрузить фотографию одним из следующих способов:"</string>

    <!-- Example Plant -->
    <string name="Orchid">Орхидея</string>

    <string name="Watering">Полив</string>
    <string name="Watering_info">Поливы должны быть регулярными, теплой мягкой водой (22 – 28 °С).\n\nОптимальный способ полива – погружение в течение 20 минут.\n\nЛетом в жаркую погоду орхидеи поливают примерно 1 раз в неделю.\n\nЗимой при содержании в прохладной комнате – 1-2 раза в месяц. Также 1 раз в 2 недели рекомендован душ теплой водой – 45 – 55°С.\n\nВо время цветения поливать следует 1 раза в 2 недели, важно, чтобы субстрат не пересыхал, но и не заболачивался.</string>

    <string name="Insolation">Инсоляция</string>
    <string name="Insolation_info">Освещенность растения должна быть высокая, но солнечные лучи должны быть рассеянные так как прямые солнечные лучи даже в зимнее время могут обжечь листья цветка.\n\nЕсли в помещении окна только южной ориентации, то цветок располагают в 2-3 м. от окна.</string>

    <string name="Pruning">Обрезка</string>
    <string name="Pruning_info">После окончания цветения цветонос срезают полностью, если растение здоровое и хорошо развитое – до первой живой почки, точнее на 2 см выше нее.</string>

    <string name="Soil">Почва</string>
    <string name="Soil_info">В качестве почвы нужен специализированный грунт, состоящий преимущественно из сосновой коры.\n\nОрхидеи нуждаются в регулярных подкормках. Но их проводят до появления первого бутона на цветоносе. Первую подкормку проводят через 1 месяц после пересадки и далее до момента первого бутона подкармливают растение 2 раза в месяц.</string>

    <string name="Pot_size">Размер горшка</string>
    <string name="Pot_size_info">Для орхидей нужен горшок, который не будет стеснять их корневую часть, но не будет оставлять лишней свободы. Лучше всего подойдет емкость, диаметр которой больше габаритов корневой системы на 3 см.</string>
    <!-- Example Plant -->


    <string name="dialog">К статье</string>

    <!-- Fragment Profile -->
    <string name="user">username</string>
    <string name="countText">Количество найденных растений</string>

</resources>