<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="72dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="@+id/aboutApp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@+id/aboutApp"
        />

    <TextView
        android:id="@+id/aboutApp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingMultiplier="1.15"
        android:text="@string/aboutApp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintBottom_toTopOf="@+id/camera"/>


    <ImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="@color/transparent"
        android:src="@drawable/camera"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/captureBtn"
        app:layout_constraintEnd_toStartOf="@id/gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutApp"
       />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTintMode="@color/transparent"
        android:contentDescription="@string/galleryBtn"
        android:src="@drawable/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera"
        app:layout_constraintTop_toBottomOf="@+id/aboutApp" />


</androidx.constraintlayout.widget.ConstraintLayout>